--- a/L001/101_home_ex.ipynb
+++ b/L001/101_home_ex.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -96,20 +96,20 @@
     "int_Day = int(str_Day)\n",
     "int_Month = month[month.index(str_Month) - 1]\n",
     "\n",
-    "for i in range(0, len(arr_Znak)):\n",
-    "    if arr_Znak[i][1].find(str(int_Month)) > -1:\n",
-    "        if int_Day >= int(arr_Znak[i][1][3] + arr_Znak[i][1][4]):\n",
-    "            print('Ваш знак зодиака: ' + arr_Znak[i][0])\n",
+    "for znak in arr_Znak:\n",
+    "    if znak[1][0:2].find(str(int_Month)) > -1:\n",
+    "        if int_Day >= int(znak[1][3:5]):\n",
+    "            print('Ваш знак зодиака: ' + znak[0])\n",
     "            break\n",
-    "    if arr_Znak[i][2].find(str(int_Month)) > -1:\n",
-    "        if int_Day <= int(arr_Znak[i][2][3] + arr_Znak[i][2][4]):\n",
-    "            print('Ваш знак зодиака: ' + arr_Znak[i][0])\n",
+    "    if znak[2][0:2].find(str(int_Month)) > -1:\n",
+    "        if int_Day <= int(znak[2][3:5]):\n",
+    "            print('Ваш знак зодиака: ' + znak[0])\n",
     "            break\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
