--- a/L001/101_home_ex.ipynb
+++ b/L001/101_home_ex.ipynb
@@ -139,35 +139,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Счастливый билет\n"
+      "123321 счастливый билет\n",
+      "123456 счастливый билет\n"
      ]
     }
    ],
    "source": [
     "#задание №5\n",
     "\n",
-    "number = 123321\n",
-    "n1_3 = 0\n",
-    "n4_6 = 0\n",
+    "number = (123321,123456)\n",
     "\n",
-    "for i in range(0,3):\n",
-    "    n1_3 = n1_3 + int(str(number)[i])\n",
-    "    n4_6 = n4_6 + int(str(number)[i + 3])\n",
-    "\n",
-    "if n1_3 == n4_6:\n",
-    "    print('Счастливый билет')\n",
-    "else:\n",
-    "     print('Несчастливый билет')\n",
-    "    \n",
-    "    \n",
-    "    "
+    "for element in number:\n",
+    "    n1_3 = 0\n",
+    "    n4_6 = 0\n",
+    "    for i in range(0,3):\n",
+    "        n1_3 = n1_3 + element\n",
+    "        n4_6 = n4_6 + element\n",
+    "    if n1_3 == n4_6:\n",
+    "        print(f'{element} счастливый билет')\n",
+    "    else:\n",
+    "        print(f'{element} несчастливый билет')\n"
    ]
   },
   {
