--- a/L001/101_home_ex.ipynb
+++ b/L001/101_home_ex.ipynb
@@ -170,18 +170,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Введите тип фигуры: Треугольник\n",
-      "Введите длину стороны А: 2\n",
-      "Введите длину стороны Б: 2\n",
-      "Введите длину стороны В: 3\n",
-      "Площадь треугольника: 1.98\n"
+      "Введите тип фигуры: Прямоугольник\n",
+      "Введите длину стороны А: 25\n",
+      "Введите длину стороны Б: 25\n",
+      "Площадь прямоугольника: 625\n"
      ]
     }
    ],
@@ -197,10 +196,10 @@
     "\n",
     "str_FigType = input('Введите тип фигуры: ')\n",
     "\n",
-    "for i in range(0, len(arr_Quest)):\n",
-    "    if arr_Quest[i][0] == str_FigType:\n",
-    "        for j in range(1, len(arr_Quest[i])):\n",
-    "            list_Param.append(int(input('Введите ' + arr_Quest[i][j] + ': ')))\n",
+    "for fig in arr_Quest:\n",
+    "    if fig[0] == str_FigType:\n",
+    "        for i in range(1,len(fig)):\n",
+    "            list_Param.append(int(input(f'Введите {fig[i]}: ')))\n",
     "        break\n",
     "\n",
     "int_LenParam = len(list_Param)\n",
