--- a/L001/001_home_ex.ipynb
+++ b/L001/001_home_ex.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Задайте строку: цуукеен\n",
-      "Нечетное количество символой, средний: к\n"
+      "Задайте строку: qwerty\n",
+      "Четное количество символов, средние: er\n"
      ]
     }
    ],
@@ -20,16 +20,9 @@
     "str_word = input('Задайте строку: ')\n",
     "len_str_word = len(str_word)\n",
     "if len_str_word % 2 == 0:\n",
-    "    print('Четное количество символов, средние: ' + str_word[int(len_str_word / 2) - 1] + str_word[int(len_str_word / 2)])\n",
+    "    print(f'Четное количество символов, средние: {str_word[int(len_str_word / 2) - 1] + str_word[int(len_str_word / 2)]}')\n",
     "else:\n",
-    "    print('Нечетное количество символов, средний: '+ str_word[len_str_word // 2])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### "
+    "    print(f'Нечетное количество символов, средний: {str_word[len_str_word // 2]}')"
    ]
   },
   {
@@ -62,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +159,7 @@
     "    summ = summ + int(splitted_string[2]) \n",
     "    users[i] = splitted_string[1]\n",
     "    \n",
-    "print(\"Среднее количество просмотров на уникального пользователя: \" + str(float(summ) / len(np.unique(users))))\n"
+    "print(f'Среднее количество просмотров на уникального пользователя: {str(float(summ) / len(np.unique(users)))}')\n"
    ]
   },
   {
@@ -178,9 +171,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Введите числа, разделенные пробелом:2 2 2 33 33 45 45 5\n",
+      "Введите числа, разделенные пробелом: 2 2 2 33 33 33 4 55 55 77 67 67\n",
       "Результат:\n",
-      " 2 33 45\n"
+      " 2 33 55 67\n"
      ]
     }
    ],
@@ -189,21 +182,21 @@
     "\n",
     "str_output = ''\n",
     "\n",
-    "input_string = input('Введите числа, разделенные пробелом:')\n",
+    "input_string = input('Введите числа, разделенные пробелом: ')\n",
     "splitted_string = input_string.split(' ')       #оформляю каждое число отдельной подстрокой в составе массива, \n",
     "                                                #разделитель \"пробел\"\n",
     "\n",
     "rez_array = ['', 0] * len(splitted_string)      #массив \"строка-количество появлений, инициирую \"\" и 0\n",
     "\n",
-    "for i in range(0, len(splitted_string)):        #перебор массива подстрок-чисел\n",
+    "for num in splitted_string:        #перебор массива подстрок-чисел\n",
     "    try:\n",
-    "        test_num = int(splitted_string[i])      #если подстрока есть число, то \n",
+    "        test_num = int(num)      #если подстрока есть число, то \n",
     "        try:\n",
-    "            index = rez_array.index(splitted_string[i]) #нахожу вхождение и-го числа в рез массиве и + количество\n",
+    "            index = rez_array.index(num) #нахожу вхождение и-го числа в рез массиве и + количество\n",
     "            rez_array[index + 1] += 1\n",
     "        except ValueError:\n",
     "            index = rez_array.index('')         #если не было еще этого числа, то заношу его в рез массив и + количество\n",
-    "            rez_array[index] = splitted_string[i]\n",
+    "            rez_array[index] = num\n",
     "            rez_array[index + 1] += 1\n",
     "    except ValueError:\n",
     "        print(\"Это не правильный ввод.\") \n",
