--- a/L002/002_home_ex.ipynb
+++ b/L002/002_home_ex.ipynb
@@ -76,14 +76,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'adwords': {'cost': 34, 'revenue': 35, 'ROI': 2.94}, 'facebook': {'cost': 110, 'revenue': 103, 'ROI': -6.36}, 'twitter': {'cost': 24, 'revenue': 11, 'ROI': -54.17}, 'vk': {'cost': 98, 'revenue': 103, 'ROI': 5.1}, 'yandex': {'cost': 153, 'revenue': 179, 'ROI': 16.99}}\n"
+      "{'adwords': {'ROI': 2.94, 'cost': 34, 'revenue': 35},\n",
+      " 'facebook': {'ROI': -6.36, 'cost': 110, 'revenue': 103},\n",
+      " 'twitter': {'ROI': -54.17, 'cost': 24, 'revenue': 11},\n",
+      " 'vk': {'ROI': 5.1, 'cost': 98, 'revenue': 103},\n",
+      " 'yandex': {'ROI': 16.99, 'cost': 153, 'revenue': 179}}\n"
      ]
     }
    ],
@@ -98,6 +102,8 @@
     "# 'twitter': {'cost': 24, 'revenue': 11, 'ROI': -54.17},\n",
     "# 'vk': {'cost': 98, 'revenue': 103, 'ROI': 5.1},\n",
     "# 'yandex': {'cost': 153, 'revenue': 179, 'ROI': 16.99}}\n",
+    "\n",
+    "from pprint import pprint\n",
     "\n",
     "results = {\n",
     "    'vk': {'revenue': 103, 'cost': 98},\n",
@@ -117,7 +123,7 @@
     "for item in social_net_ordered:\n",
     "    res_1[item] = {'cost' : results[item]['cost'], 'revenue' : results[item]['revenue'], 'ROI' : results[item]['ROI']}\n",
     "\n",
-    "print(res_1)"
+    "pprint(res_1)"
    ]
   },
   {
@@ -190,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -198,23 +204,23 @@
      "output_type": "stream",
      "text": [
       "Введите количество порций: \n",
-      "3\n",
-      "сыр: 210 гр\n",
-      "томаты: 6 шт\n",
-      "огурцы: 60 гр\n",
-      "маслины: 30 гр\n",
-      "оливковое масло: 60 мл\n",
-      "салат: 30 гр\n",
-      "перец: 60 гр\n",
-      "колбаса: 90 гр\n",
-      "бекон: 90 гр\n",
-      "оливки: 30 гр\n",
-      "томаты: 60 гр\n",
-      "тесто: 300 гр\n",
-      "лимон: 3 шт\n",
-      "вода: 600 мл\n",
-      "сахар: 30 гр\n",
-      "лайм: 60 гр\n"
+      "7\n",
+      "сыр: 490 гр\n",
+      "томаты: 14 шт\n",
+      "огурцы: 140 гр\n",
+      "маслины: 70 гр\n",
+      "оливковое масло: 140 мл\n",
+      "салат: 70 гр\n",
+      "перец: 140 гр\n",
+      "колбаса: 210 гр\n",
+      "бекон: 210 гр\n",
+      "оливки: 70 гр\n",
+      "томаты: 140 гр\n",
+      "тесто: 700 гр\n",
+      "лимон: 7 шт\n",
+      "вода: 1400 мл\n",
+      "сахар: 70 гр\n",
+      "лайм: 140 гр\n"
      ]
     }
    ],
