--- a/L003/13_04_2021.ipynb
+++ b/L003/13_04_2021.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -98,18 +98,39 @@
     "            shop_list[(ingredient['ingridient_name'], ingredient['measure'])] = ingredient['quantity'] * person \n",
     "        else:\n",
     "            shop_list[(ingredient['ingridient_name'], ingredient['measure'])] += ingredient['quantity'] * person\n",
-    "        \n",
-    "\n",
     "\n",
     "for name, q in shop_list.items():\n",
-    "    print(f'{name[0].title()}: {q} {name[1]}')"
+    "    print(f'{name[0].title()}: {q} {name[1]}')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Сыр: 350 гр\n",
+      "Томаты: 10 шт\n",
+      "Огурцы: 100 гр\n",
+      "Маслины: 50 гр\n",
+      "Оливковое Масло: 100 мл\n",
+      "Салат: 50 гр\n",
+      "Перец: 100 гр\n",
+      "Колбаса: 150 гр\n",
+      "Бекон: 150 гр\n",
+      "Оливки: 50 гр\n",
+      "Томаты: 100 гр\n",
+      "Тесто: 500 гр\n",
+      "Лимон: 5 шт\n",
+      "Вода: 1000 мл\n",
+      "Сахар: 50 гр\n",
+      "Лайм: 100 гр\n"
+     ]
+    }
+   ],
    "source": [
     "shop_list = {}\n",
     "\n",
