--- a/L003/003_home_ex.ipynb
+++ b/L003/003_home_ex.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "d3a2d094",
    "metadata": {},
    "outputs": [],
@@ -24,6 +24,40 @@
     "    '3': []\n",
     "}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "6166e7ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'type': 'passport', 'number': '2207 876234', 'name': 'Василий Гупкин'}\n",
+      "passport\n",
+      "{'type': 'invoice', 'number': '11-2', 'name': 'Геннадий Покемонов'}\n",
+      "invoice\n",
+      "{'type': 'insurance', 'number': '10006', 'name': 'Аристарх Павлов'}\n",
+      "insurance\n"
+     ]
+    }
+   ],
+   "source": [
+    "for list_doc in documents:\n",
+    "    print(list_doc)\n",
+    "    k = list_doc['type']\n",
+    "    print(k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10736c6f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
