--- a/L002/002_home_ex.ipynb
+++ b/L002/002_home_ex.ipynb
@@ -76,13 +76,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "{'vk': {'revenue': 103, 'cost': 98, 'ROI': 5.1}, 'yandex': {'revenue': 179, 'cost': 153, 'ROI': 16.99}, 'facebook': {'revenue': 103, 'cost': 110, 'ROI': -6.36}, 'adwords': {'revenue': 35, 'cost': 34, 'ROI': 2.94}, 'twitter': {'revenue': 11, 'cost': 24, 'ROI': -54.17}} \n",
+      "\n",
       "{'adwords': {'ROI': 2.94, 'cost': 34, 'revenue': 35},\n",
       " 'facebook': {'ROI': -6.36, 'cost': 110, 'revenue': 103},\n",
       " 'twitter': {'ROI': -54.17, 'cost': 24, 'revenue': 11},\n",
@@ -116,14 +118,18 @@
     "for social_net in results:\n",
     "    results[social_net]['ROI'] = round(100 * (results[social_net]['revenue'] / results[social_net]['cost'] - 1), 2)\n",
     "\n",
-    "social_net_ordered = list(results.keys())\n",
-    "social_net_ordered.sort()\n",
+    "print(results, '\\n')\n",
+    "pprint(results)\n",
     "\n",
-    "res_1 = {}\n",
-    "for item in social_net_ordered:\n",
-    "    res_1[item] = {'cost' : results[item]['cost'], 'revenue' : results[item]['revenue'], 'ROI' : results[item]['ROI']}\n",
+    "#social_net_ordered = list(results.keys())\n",
+    "#social_net_ordered.sort()\n",
     "\n",
-    "pprint(res_1)"
+    "#res_1 = {}\n",
+    "#for item in social_net_ordered:\n",
+    "#    res_1[item] = {'cost' : results[item]['cost'], 'revenue' : results[item]['revenue'], 'ROI' : results[item]['ROI']}\n",
+    "\n",
+    "#pprint(res_1)\n",
+    "#pprint(results)"
    ]
   },
   {
