--- a/L001/001_home_ex.ipynb
+++ b/L001/001_home_ex.ipynb
@@ -153,7 +153,8 @@
     "]\n",
     "\n",
     "summ = 0\n",
-    "users = [''] * len(stream)\n",
+    "#users = [''] * len(stream)\n",
+    "users = []\n",
     "for i in range(0, len(stream)):\n",
     "    splitted_string = stream[i].split(\",\")\n",
     "    summ = summ + int(splitted_string[2]) \n",
@@ -237,7 +238,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
