--- a/L008_N_P/L008_home_ex.ipynb
+++ b/L008_N_P/L008_home_ex.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "925f970b",
+   "id": "31777200",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f7ea332",
+   "id": "29c63900",
    "metadata": {},
    "source": [
     "Задание 1\n",
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "2692ab1c",
+   "id": "a7453142",
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "279acec8",
+   "id": "531f27d4",
    "metadata": {},
    "source": [
     "Задание 2\n",
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "f00993a0",
+   "id": "6e8a1bf3",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e78188ea",
+   "id": "e2efc443",
    "metadata": {},
    "source": [
     "Задание 3\n",
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "b7ad4a62",
+   "id": "7dd873c5",
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "052d6f77",
+   "id": "a4632051",
    "metadata": {},
    "source": [
     "Задание 4\n",
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "56ab893a",
+   "id": "fe172609",
    "metadata": {},
    "outputs": [
     {
@@ -178,25 +178,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "id": "9ffdcf29",
+   "execution_count": 92,
+   "id": "b1f24a23",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Наибольшее сходство с пользователем \"8\" с косинусной метрикой 0.9486832980505138\n"
+      "Наибольшее сходство с пользователем \"8\" с косинусной метрикой 0.9486832981\n"
      ]
     }
    ],
    "source": [
+    "#предположу, что при использовании точности вычисления косинусной мерики до, например, 10 знака, вероятность\n",
+    "#нахождения пользователя с точно такой же косинусной метрикой равна 0\n",
+    "#v1\n",
     "cos_metric_max = 0\n",
     "user_ID = 0\n",
     "for uid, item in enumerate(users_stats):\n",
     "    cos_metric = np.dot(item, next_user_stats) / ((np.linalg.norm(item) * np.linalg.norm(next_user_stats)))\n",
-    "    if cos_metric_max < cos_metric:\n",
-    "        cos_metric_max = cos_metric\n",
+    "    if cos_metric_max < round(cos_metric, 10):\n",
+    "        cos_metric_max = round(cos_metric, 10)\n",
     "        user_ID = uid + 1\n",
     "\n",
     "print(f'Наибольшее сходство с пользователем \"{user_ID}\" с косинусной метрикой {cos_metric_max}')\n",
@@ -205,60 +208,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "id": "20c890f3",
+   "execution_count": 98,
+   "id": "0a1cd951",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'dict' object has no attribute 'max'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-64-e8f1f2341615>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mdict_\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mdict_\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0muid\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnext_user_stats\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlinalg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnorm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlinalg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnorm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnext_user_stats\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0muid\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mitem\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0musers_stats\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mdict_\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'dict' object has no attribute 'max'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Наибольшее сходство с пользователем \"8\" с косинусной метрикой 0.9486832981\n"
      ]
     }
    ],
    "source": [
-    "dict_ = {}\n",
-    "dict_ = {uid+1:np.dot(item, next_user_stats)/((np.linalg.norm(item)*np.linalg.norm(next_user_stats))) for uid, item in enumerate(users_stats)}\n",
-    "dict_.max()"
+    "#v2\n",
+    "def cos_metric(item):\n",
+    "    return round(np.dot(item, next_user_stats)/((np.linalg.norm(item)*np.linalg.norm(next_user_stats))),10)\n",
+    "\n",
+    "dict_ = {uid + 1 : cos_metric(item) for uid, item in enumerate(users_stats)}\n",
+    "key_val = max(list(dict_.items()), key=lambda i : i[1])\n",
+    "print(f'Наибольшее сходство с пользователем \"{key_val[0]}\" с косинусной метрикой {key_val[1]}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "id": "8d9ffa67",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{1: 0.19999999999999996,\n",
-       " 2: 0.8451542547285165,\n",
-       " 3: 0.3999999999999999,\n",
-       " 4: 0.7905694150420948,\n",
-       " 5: 0.3999999999999999,\n",
-       " 6: 0.0,\n",
-       " 7: 0.0,\n",
-       " 8: 0.9486832980505138,\n",
-       " 9: 0.0,\n",
-       " 10: 0.0}"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "cf414826",
+   "id": "079ec97f",
    "metadata": {},
    "outputs": [],
    "source": []
