--- a/L001_stat/L001_stat_home_ex.ipynb
+++ b/L001_stat/L001_stat_home_ex.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
        "4                         NaN                74.0            7.4     2.0  "
       ]
      },
-     "execution_count": 164,
+     "execution_count": 262,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +324,7 @@
        "max             40.800000  184.000000           75.000000      89.000000"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 264,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +352,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 265,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +436,7 @@
        "'\\nВыводы по характеристикам:\\n1. rectal temperature - значения сконцентрированы вокруг среднего, размах не велик, 20% пустых\\n2. pulse - значения сконцентрированы вокруг среднего, размах большой, 8% пустых\\n3. packed cell volume - значения сконцентрированы вокруг среднего, размах большой, 9,7% пустых\\n4. total protein - значения сильно смещены влево (к диапазону нормальных значений), размах большой, 11% пустых\\n\\n5. mucous membranes - 15,6% пустых, превалирует категория \"1\"\\n6. abdominal distension - 18,6% пустых, распределение близко к равномерному\\n7. rectal examination - feces - 34% пустых, превалируют категории \"1\" и \"4\"\\n8. outcom - 0.33% пустых, превалируют категории \"1\"\\n'"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 267,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [
     {
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [
     {
@@ -616,7 +616,7 @@
        "\"\\nВыводы по выбросам:\\n1. rectal temperature - количество выбросов не велико, обусловлены естественными причинами (согласно описания),\\nоставить, как есть\\n2. pulse - количество выбросов не велико, экстремальные значения параметра, обусловлены состоянием здоровья лошади \\n(вывод сделан на основании данных о смерности лошадей ('outcom') с 'pulse' > 140), оставить, как есть\\n3. packed cell volume - количество выбросов не велико, экстремальные значения параметра, обусловлены состоянием \\nздоровья лошади (вывод сделан на основании данных о смерности лошадей ('outcom') с 'acked cell volume' > 60), \\nоставить, как есть\\n4. total protein - выбросов нет\\n\""
       ]
      },
-     "execution_count": 172,
+     "execution_count": 270,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 271,
    "metadata": {},
    "outputs": [
     {
@@ -760,7 +760,7 @@
        "275                        NaN                50.0            6.2    2.0  "
       ]
      },
-     "execution_count": 173,
+     "execution_count": 271,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -771,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 272,
    "metadata": {},
    "outputs": [
     {
@@ -1180,7 +1180,7 @@
        "281                        4.0                66.0            6.5    2.0  "
       ]
      },
-     "execution_count": 174,
+     "execution_count": 272,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1191,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 273,
    "metadata": {},
    "outputs": [
     {
@@ -1207,7 +1207,7 @@
        " 'outcom': [1, 0.0]}"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 273,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1225,16 +1225,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 274,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"\\n1. rectal temperature - заполнить средним (нормальное распределение, концентрация вокруг среднего)\\n2. pulse - получить средние по двум группам значений переменной (высокие/низкие), по признаку смерти у строки \\nсо значением 'pulse'= Null заполнить средним ('outcom' 1/2-3 = среднее из низкий/высокий)\\n3. mucous membranes - если лошадь жива заполняем 1-3, если нет 4-6, если неизвестно - 1 (среди живых 3/4 с 1-3, \\nсреди мертвых 2/3 с 4-6)\\n4. abdominal distension - если лошадь жива заполняем 1-2, если нет 3-4, если неизвестно - модой\\n(среди живых 3/4 с 1-2, среди мертвых 2/3 с 3-4)\\n5. rectal examination - feces - заполняем модой\\n6. packed cell volume - заполнить средним (распределение близкое к нормальному, концентрация вокруг среднего)\\n7. total protein - заполняем модой (корреляции нет ни с чем)\\n\""
+       "\"\\n1. rectal temperature - заполнить средним (нормальное распределение, концентрация вокруг среднего)\\n2. pulse - получить средние по двум группам значений переменной (высокие/низкие), по признаку смерти у строки \\nсо значением 'pulse'= Null заполнить средним ('outcom' 1/2-3 = среднее из низкий/высокий)\\n3. mucous membranes - если лошадь жива заполняем 1-3, если нет 4-6, если неизвестно - 1 (среди живых 3/4 с 1-3, \\nсреди мертвых 2/3 с 4-6)\\n4. abdominal distension - если лошадь жива заполняем 1-2, если нет 3-4, если неизвестно - модой\\n(среди живых 3/4 с 1-2, среди мертвых 2/3 с 3-4)\\n5. rectal examination - feces - заполняем модой\\n6. packed cell volume - заполнить средним (распределение близкое к нормальному, концентрация вокруг среднего)\\n7. total protein - заполняем средним (корреляции нет ни с чем)\\n\""
       ]
      },
-     "execution_count": 176,
+     "execution_count": 274,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1256,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 275,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1319,13 +1319,13 @@
     "#'total protein'\n",
     "horse['total protein'].fillna(horse['total protein'].mean(), inplace = True)\n",
     "\n",
-    "#'outcom', \n",
+    "#'outcom', одно пустое значение, корреляция не ясна\n",
     "horse['outcom'].fillna(horse['outcom'].mode()[0], inplace = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 276,
    "metadata": {},
    "outputs": [
     {
@@ -1356,38 +1356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 300 entries, 0 to 299\n",
-      "Data columns (total 8 columns):\n",
-      " #   Column                      Non-Null Count  Dtype   \n",
-      "---  ------                      --------------  -----   \n",
-      " 0   rectal temperature          300 non-null    float64 \n",
-      " 1   pulse                       300 non-null    object  \n",
-      " 2   mucous membranes            300 non-null    float64 \n",
-      " 3   abdominal distension        300 non-null    float64 \n",
-      " 4   rectal examination - feces  300 non-null    category\n",
-      " 5   packed cell volume          300 non-null    float64 \n",
-      " 6   total protein               300 non-null    float64 \n",
-      " 7   outcom                      299 non-null    category\n",
-      "dtypes: category(2), float64(5), object(1)\n",
-      "memory usage: 15.1+ KB\n"
-     ]
-    }
-   ],
-   "source": [
-    "horse.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 277,
    "metadata": {},
    "outputs": [
     {
@@ -1424,7 +1393,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>38.500000</td>\n",
+       "      <td>38.5</td>\n",
        "      <td>66.0</td>\n",
        "      <td>5.0</td>\n",
        "      <td>4.0</td>\n",
@@ -1435,7 +1404,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>39.200000</td>\n",
+       "      <td>39.2</td>\n",
        "      <td>88.0</td>\n",
        "      <td>4.0</td>\n",
        "      <td>2.0</td>\n",
@@ -1446,7 +1415,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>38.300000</td>\n",
+       "      <td>38.3</td>\n",
        "      <td>40.0</td>\n",
        "      <td>3.0</td>\n",
        "      <td>1.0</td>\n",
@@ -1457,7 +1426,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>39.100000</td>\n",
+       "      <td>39.1</td>\n",
        "      <td>164.0</td>\n",
        "      <td>6.0</td>\n",
        "      <td>4.0</td>\n",
@@ -1468,123 +1437,42 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>37.300000</td>\n",
+       "      <td>37.3</td>\n",
        "      <td>104.0</td>\n",
        "      <td>6.0</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
        "      <td>4.0</td>\n",
        "      <td>74.0</td>\n",
        "      <td>7.4</td>\n",
        "      <td>2.0</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>95</th>\n",
-       "      <td>37.300000</td>\n",
-       "      <td>48.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>41.0</td>\n",
-       "      <td>69.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>96</th>\n",
-       "      <td>38.167917</td>\n",
-       "      <td>84.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>44.0</td>\n",
-       "      <td>8.5</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>97</th>\n",
-       "      <td>38.100000</td>\n",
-       "      <td>88.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>55.0</td>\n",
-       "      <td>60.0</td>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>98</th>\n",
-       "      <td>37.700000</td>\n",
-       "      <td>44.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>41.0</td>\n",
-       "      <td>60.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>99</th>\n",
-       "      <td>39.600000</td>\n",
-       "      <td>108.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>59.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>100 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "    rectal temperature  pulse  mucous membranes  abdominal distension  \\\n",
-       "0            38.500000   66.0               5.0                   4.0   \n",
-       "1            39.200000   88.0               4.0                   2.0   \n",
-       "2            38.300000   40.0               3.0                   1.0   \n",
-       "3            39.100000  164.0               6.0                   4.0   \n",
-       "4            37.300000  104.0               6.0                   3.0   \n",
-       "..                 ...    ...               ...                   ...   \n",
-       "95           37.300000   48.0               2.0                   3.0   \n",
-       "96           38.167917   84.0               3.0                   1.0   \n",
-       "97           38.100000   88.0               4.0                   3.0   \n",
-       "98           37.700000   44.0               3.0                   2.0   \n",
-       "99           39.600000  108.0               6.0                   3.0   \n",
+       "   rectal temperature  pulse mucous membranes abdominal distension  \\\n",
+       "0                38.5   66.0              5.0                  4.0   \n",
+       "1                39.2   88.0              4.0                  2.0   \n",
+       "2                38.3   40.0              3.0                  1.0   \n",
+       "3                39.1  164.0              6.0                  4.0   \n",
+       "4                37.3  104.0              6.0                  4.0   \n",
        "\n",
-       "   rectal examination - feces  packed cell volume  total protein outcom  \n",
-       "0                         3.0                45.0            8.4    2.0  \n",
-       "1                         4.0                50.0           85.0    3.0  \n",
-       "2                         1.0                33.0            6.7    1.0  \n",
-       "3                         3.0                48.0            7.2    2.0  \n",
-       "4                         4.0                74.0            7.4    2.0  \n",
-       "..                        ...                 ...            ...    ...  \n",
-       "95                        3.0                41.0           69.0    1.0  \n",
-       "96                        3.0                44.0            8.5    1.0  \n",
-       "97                        4.0                55.0           60.0    3.0  \n",
-       "98                        1.0                41.0           60.0    1.0  \n",
-       "99                        3.0                59.0            8.0    1.0  \n",
-       "\n",
-       "[100 rows x 8 columns]"
+       "  rectal examination - feces  packed cell volume  total protein outcom  \n",
+       "0                        3.0                45.0            8.4    2.0  \n",
+       "1                        4.0                50.0           85.0    3.0  \n",
+       "2                        1.0                33.0            6.7    1.0  \n",
+       "3                        3.0                48.0            7.2    2.0  \n",
+       "4                        4.0                74.0            7.4    2.0  "
       ]
      },
-     "execution_count": 234,
+     "execution_count": 277,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "horse.head(100)"
+    "horse.head()"
    ]
   },
   {
