--- a/L011/L011_home_ex.ipynb
+++ b/L011/L011_home_ex.ipynb
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "d8b530b4",
    "metadata": {},
    "outputs": [],
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "7d5cb72f",
    "metadata": {},
    "outputs": [],
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "f9d33fbb",
    "metadata": {},
    "outputs": [
@@ -378,7 +378,7 @@
        "[64 rows x 3 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,6 +398,133 @@
     "query['region'] = query['keyword'].apply(region_selection)\n",
     "query[query['region']=='Дальний Восток']"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "57eedc4a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "9d11c25b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['москва', 'тула', 'ярославль'] вологда\n",
+      "['петербург', 'псков', 'мурманск'] вологда\n",
+      "['владивосток', 'сахалин', 'хабаровск'] вологда\n",
+      "['москва', 'тула', 'ярославль'] вологда\n",
+      "['петербург', 'псков', 'мурманск'] вологда\n",
+      "['владивосток', 'сахалин', 'хабаровск'] вологда\n",
+      "['москва', 'тула', 'ярославль'] вологда\n",
+      "['петербург', 'псков', 'мурманск'] вологда\n",
+      "['владивосток', 'сахалин', 'хабаровск'] вологда\n"
+     ]
+    }
+   ],
+   "source": [
+    "def region(row):\n",
+    "    row_list = row.split(' ')\n",
+    "    for key in geo_data:\n",
+    "        #print(key)\n",
+    "        i = 0\n",
+    "        for key, value in geo_data.items():\n",
+    "            print(value, row_list[i])\n",
+    "            if row_list[i] in value:\n",
+    "                print(row_list[i])\n",
+    "                return key\n",
+    "        i +=1\n",
+    "\n",
+    "row = 'вологда петербург среда'\n",
+    "            \n",
+    "qwe = region(row)\n",
+    "qwe"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f52e3a7",
+   "metadata": {},
+   "source": [
+    "# qwe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "304d4ea5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "68156846",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Северо-Запад\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Северо-Запад'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def region(row):\n",
+    "    row_list = row.split(' ')\n",
+    "    for key in geo_data:\n",
+    "        for value in row_list:\n",
+    "            if value in geo_data.get(key):\n",
+    "                print(key)\n",
+    "                return key\n",
+    "            \n",
+    "row = 'ветер петербург москвааааа'\n",
+    "qwe = region(row)\n",
+    "qwe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56a169e6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bfb11f73",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0cfcd6e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -529,7 +656,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
