--- a/diplom/diplom.ipynb
+++ b/diplom/diplom.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "7698fcb5",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
     "import plotly.express as px\n",
     "%matplotlib inline\n",
     "#рисование статистических графиков\n",
-    "import seaborn as sns\n",
+    "#import seaborn as sns\n",
     "\n",
     "#игнорирование сообщений\n",
     "import warnings\n",
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "960a0308",
    "metadata": {},
    "outputs": [
@@ -286,7 +286,7 @@
        "4     low  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3835,7 +3835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "6216b0e7",
    "metadata": {},
    "outputs": [
@@ -3855,7 +3855,7 @@
        "Name: 0, dtype: object"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4750,24 +4750,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 59,
    "id": "47462333",
    "metadata": {},
    "outputs": [],
    "source": [
     "#убрать лишние данные department и salary\n",
     "\n",
-    "HR_data_cutted = HR_data.drop(['department', 'salary'], axis = 1)\n",
+    "HR_data_cutted = HR_data.drop(['department', 'salary', 'left'], axis = 1)\n",
     "\n",
     "#разделить полученный массив на обучающую и тестовую выборки в соотношении 80х20\n",
     "\n",
-    "target = HR_data_cutted['left']\n",
+    "target = HR_data['left']\n",
     "train_X, valid_X, train_y, valid_y = train_test_split(HR_data_cutted, target, test_size=0.2, shuffle = True, random_state=29)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 60,
    "id": "737641c1",
    "metadata": {},
    "outputs": [
@@ -4790,7 +4790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 61,
    "id": "82920868",
    "metadata": {},
    "outputs": [
@@ -4829,7 +4829,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
